# localhost-hack

./: .env.example  .gitignore  README.md  pyproject.toml
demo-project/: README.md
demo-project/cli/: setup.py
demo-project/landing-page/: index.html
demo-project/skill/: SKILL.md
diagnostics/: __init__.py  __main__.py  repo_audit.py
mydocs/: README.md  pi-review-workflow.md
review-agent/: README.md  setup.sh
reviews/: README.md
scripts/: setup.sh
src/: __init__.py
src/agent/: __init__.py  config.py  core.py  memory.py  tools.py  tracer.py
src/api/: server.py
src/mac_harness/: __init__.py  __main__.py  cli.py
src/review_agent/: __init__.py  __main__.py  config.py  pipeline.py  server.py
src/ui/: index.html
tests/: conftest.py  test_agent.py  test_mac_harness.py  test_repo_audit.py  test_review_agent.py  test_settings.py  test_shared_helpers.py
